app/styles/main.css
@import url('login.css');
@font-face {
  font-family: 'Montserrat';
  src: url('/fonts/Montserrat/montserrat-regular-webfont.eot');
  src: url('/fonts/Montserrat/montserrat-regular-webfont.eot?#iefix') format('embedded-opentype'),
       url('/fonts/Montserrat/montserrat-regular-webfont.woff2') format('woff2'),
       url('/fonts/Montserrat/montserrat-regular-webfont.woff') format('woff'),
       url('/fonts/Montserrat/montserrat-regular-webfont.ttf') format('truetype'),
       url('/fonts/Montserrat/montserrat-regular-webfont.svg#montserratregular') format('svg');
  font-weight: normal;
  font-style: normal;
}
@font-face {
  font-family: 'Montserrat-Bold';
  src: url('/fonts/Montserrat/montserrat-bold-webfont.eot');
  src: url('/fonts/Montserrat/montserrat-bold-webfont.eot?#iefix') format('embedded-opentype'),
       url('/fonts/Montserrat/montserrat-bold-webfont.woff2') format('woff2'),
       url('/fonts/Montserrat/montserrat-bold-webfont.woff') format('woff'),
       url('/fonts/Montserrat/montserrat-bold-webfont.ttf') format('truetype'),
       url('/fonts/Montserrat/montserrat-bold-webfont.svg#montserratbold') format('svg');
  font-weight: normal;
  font-style: normal;
}

html, body {
  background: #fafafa;
  font-family: 'Montserrat';
  min-height: 100vh;
  overflow-x: hidden;
}

a, a span {
  color: #277cea;
  cursor: pointer;
  -webkit-transition: .25s color ease-in-out, .25s background-color ease-in-out;
  -o-transition: .25s color ease-in-out, .25s background-color ease-in-out;
  transition: .25s color ease-in-out, .25s background-color ease-in-out;
}
a:hover, 
a:hover span {
  color: #23527c;
}
a:hover {
  text-decoration: none;
}
a:hover span {
  text-decoration: underline;
}
.link {
  cursor: pointer;
  font-size: 10px;
}

.ng-scope {
  min-height: 100%;
}
.btn.ng-scope {
  min-height: 0;
}

.hide-body {
  display: none !important;
}

.site-logo {
  max-width: 200px;
}

/****index.html*****/
.navbar-collapse {
  padding: 0px;
}
.navbar-default {
  background: #fff;
  border: 0px;
  border-bottom: 2px solid #499c4b;
  border-radius: 0px;
  min-height: 60px;
  margin-bottom: 0px;

}
.navbar-brand {
  color: #499c4b !important;
  height: 60px;
  line-height: 30px;
  font-family: 'Montserrat', sans-serif;
}
.nav > li > a {
  line-height: 32px;
  text-transform: uppercase;
  color:#838D8F!important;
  font-size:12px;
  font-family: 'Montserrat-Bold', sans-serif;
  padding:15px 10px !important;
}
.navbar-default .navbar-nav > .active > a, 
.navbar-default .navbar-nav > .active > a:hover, 
.navbar-default .navbar-nav > .active > a:focus {
  color:#aaa !important;
  background:none;
}
.navbar-form {
  float:left;
  margin-top:12px;
}
.navbar-form .form-group .input-group {
  width: 280px;
}
.navbar-form .input-group-addon {
  height: 40px;
  padding: 0px;
  padding-left: 10px;
  padding-right: 10px;
  border-top-left-radius:10px;
  border-bottom-left-radius:10px;
  background:#fafafa;
  border:1.5px solid #eaeaea !important;
  border-right:none !important;
}
.navbar-form input[type='text']{
  width: 100%;
  height: 40px;
  border-left:none;
  box-shadow:none;
  background:#fafafa;
  font-size:14px;
  width:20%;
  outline:none;
  border:1.5px solid #eaeaea !important;
  border-left:none !important;
  border-top-right-radius:10px;
  border-bottom-right-radius:10px;
  outline:none!important;
  color:#acb2b3;
  font-size: 12px;
}
.navbar-form input[type='text']:active{
  outline:none !important;
  border:1.5px solid #eaeaea !important;
  border-left:none !important;
}

.navbar-form .glyphicon{
  top:0px;
  vertical-align: middle;
}
.navbar-form .btn{
  background: #499c4b;
  font-size: 9px;
  font-family: 'Montserrat-Bold';
  padding: 6px 10px;
}
.navbar .pull-right{
  line-height:60px;
  height:60px;
  color:#aaa;
  font-family: 'Montserrat', sans-serif;
}
.navbar .pull-right a{
  color:#499c4b;
}
.main-container {
  width:100%;
  padding:0px;
  background:#fafafa;
  min-height:100vh;
  position: relative;
}
.main-container.dashboard-wrapper {
  position: static;
}
/******/
/****dashboard main.html***/
.dashboard-container {
  background: #eaeaea;
  padding: 30px 0;
}
.dashboard-container .col-md-6 .front-box-wrapper {
  background: #fff;
}
.sub-container__header {
  height: 50px;
  border-bottom:1px solid #eaeaea;
}
.sub-container__body {
  height: 250px;
  overflow-y: scroll;
}
.sub_container__footer{
  height:50px;
  background:#f7f7f7;
  padding-right:10px;
  line-height:50px;
}
.recent-sites .heading{
  margin-left:10px;
  color:#bbb;
  line-height: 50px;
  font-size:12px;
  letter-spacing: 2px;
}
.dashboard-container .btn{
  background:#499c4b;
  font-size:12px;
  padding:6px 20px;
  border:none !important;
  margin-top:10px;
  border-radius:6px;
}
.quick-links .sub-container__body{
  height:350px;
  overflow-y: auto; 
}
.datepicker{
  width:40%;
  outline:none !important;
  height:300px;
  border-right:1px solid #eaeaea;
  float:left;
}
.pickadate-centered-heading{
  margin:0px;
  line-height: 50px;
  font-weight: bold;
  text-transform: uppercase;
  letter-spacing: 2px;
}
.pickadate-cell li{
  border-width: 0px !important;
}
.pickadate-header {
  position: relative;
  height: 50px;
  line-height: 50px;
  border-bottom:1px solid #eaeaea;
}
.pickadate-head{
  border:none !important;
  background:none !important;
  font-style:italic;
  font-size: 14px;
}
.pickadate-cell:last-child li{
  background:#fafafa;
  font-size:14px;
  height:32px;
  line-height: 32px !important;
  padding:0px !important;
  outline:none !important;
}
.pickadate-cell .pickadate-active{
  background:rgb(33,99,229)!important;
}
.pickadate-controls{
  padding-left:10px;
  padding-right:10px;
}
.pickadate a{
  outline:none !important;
}

.quick-links .info-header {
  border-bottom:1px solid #eaeaea;
  color:#bbb;
  height: 50px;
  letter-spacing: 2px;
  line-height: 50px;
  font-size: 12px;
  padding-left: 10px;
}
.quick-links .info-container {
  height:300px;
  overflow: auto;
}
/* ... */

